--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="navbarcasing">
+    <!-- <div class="navbarcasing">
         <div class="navbar">
             <div class="links">
                 <ul>
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <main class="hero">
         <img src="./imgs/snow_shoveling.jpg" alt="" class="hero-image">
         <div class="hero-text">
