--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         </div>
     </div> -->
     <main class="hero">
-        <img src="./imgs/snow_shoveling.jpg" alt="" class="hero-image">
+        <!-- <img src="./imgs/snow_shoveling.jpg" alt="" class="hero-image"> -->
+        <img url="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.lawnstarter.com%2Flawn-mowing&psig=AOvVaw3Lfeo7Pr-fDRiqwMPiP19E&ust=1747451992417000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCNDPoYuEp40DFQAAAAAdAAAAABAL" alt="" class="hero-image">
         <div class="hero-text">
             <h1>Greenscape Yard Care</h1>
             <p>Providing the best yard care services in the area!</p>
@@ -103,6 +104,7 @@
             <h5>greysonhubler@gmail.com</h5>
         </div>
     </div>
+    <p>Website Main Photo<cite>Lawn Mower. (n.d.). Lawn Starter. https://www.lawnstarter.com/lawn-mowing</cite></p>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbz6dICQeKxv6Fr-jiaUUS6VQd51QwYlOM0-ahUY1JJj47k5typSAIl8MwB_nLK3DiN4jw/exec'
         const form = document.forms['greenscape-site-goals-form']
