--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         </div>
     </div> -->
     <main class="hero">
-        <!-- <img src="./imgs/snow_shoveling.jpg" alt="" class="hero-image"> -->
-        <img url="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.lawnstarter.com%2Flawn-mowing&psig=AOvVaw3Lfeo7Pr-fDRiqwMPiP19E&ust=1747451992417000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCNDPoYuEp40DFQAAAAAdAAAAABAL" alt="" class="hero-image">
+        <img src="./imgs/lawnphoto.jpg" alt="" class="hero-image">
         <div class="hero-text">
             <h1>Greenscape Yard Care</h1>
             <p>Providing the best yard care services in the area!</p>
