update v2.1.2-text sizing

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>
     <div class="book">
         <h1>Book Here!</h1>
-        <p class="booktext">Please feel free to reach out if you have any further questions, comments, or concerns, or if you would like to make further arrangements, like weekly services! You can expect to get a confirmation text or email within the day. For gardening and other services, please contact us directly!</p>
+        <p class="aboutMEtext">Please feel free to reach out if you have any further questions, comments, or concerns, or if you would like to make further arrangements, like weekly services! You can expect to get a confirmation text or email within the day. For gardening and other services, please contact us directly!</p>
         <!-- Google Calendar Appointment Scheduling begin -->
         <link href="stylesheets/googlebooking.css" rel="stylesheet">
         <script src="https://calendar.google.com/calendar/scheduling-button-script.js" async></script>
