--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="/imgs/GreenscapeLogo.png">
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
+    <link rel="icon" type="image/x-icon" href="imgs/GreenscapeLogo.png">
     <!-- Google Site Verification -->
     <meta name="google-site-verification" content="DIToFxcng4C0Z9vm4qi1R9q7_uBeIe9e-wVxaCb-mf8" />
     <meta name="description" content="Greenscape Yard Care is a reliable local lawn care service that provides mowing, edging, leaf removal, and snow shoveling services in the Leawood and Overland Park area.">
