--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <link rel="icon" type="image/x-icon" href="imgs/GreenscapeLogo.png">
     <!-- Google Site Verification -->
     <meta name="google-site-verification" content="DIToFxcng4C0Z9vm4qi1R9q7_uBeIe9e-wVxaCb-mf8" />
+    <!-- Meta Tags -->
     <meta name="description" content="Greenscape Yard Care is a reliable local lawn care service that provides mowing, edging, leaf removal, and snow shoveling services in the Leawood and Overland Park area.">
+    <link rel="canonical" href="https://greenscapejoco.vercel.app/" />
+    <meta property="og:title" content="Greenscape Lawn Care - Leawood and Overland Park Area" />
+    <meta name="keywords" content="Greenscape,lawn care,mowing,Leawood,overland park, leaf removal,snow shoveling,edging,weedwacking,local">
 </head>
 
 <body>
