--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="servicetext">
                 <h1>Mowing</h1>
-                <h3 style="color: green;">Contact for Options!</h3>
+                <h3 style="color: green;">Book Now!</h3>
                 <p>Our mowing services ensure that your lawn is perfectly trimmed and maintained.</p>
             </div>
         </div>
@@ -73,7 +73,7 @@
             </div>
             <div class="servicetext">
                 <h1>Edging & Weedwacking</h1>
-                <h3 style="color: green;">Contact for Options!</h3>
+                <h3 style="color: green;">Book Now!</h3>
                 <p>Our edging and weedwacking services ensure that your lawn is lined with perfection.</p>
             </div>
         </div>
@@ -83,7 +83,7 @@
             </div>
             <div class="servicetext">
                 <h1>Leaf Removal</h1>
-                <h3 style="color: green;">Contact for Options!</h3>
+                <h3 style="color: green;">Book Now!</h3>
                 <p>Our leaf removal services ensure that your yard is free of leaves and debris.</p>
             </div>
         </div>
