--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
             <p>Established in 2024, I founded this buisness when I was 13. We mow yards, edge the grass, pickup leaves,
                 and shovel snow! I am now 14 and play soccer and basketball, In the fall I will be a freshman at Blue
                 Valley North High School. I referee youth soccer for Heartland Soccer
-                Association as well as Kansas Youth Soccer Association (KSYSA) during state cup! I partcipate in Civil
-                Air Patrol(Aviation Program), and I have an intrest in aviation and hope to be a commericial pilot for a
+                Association as well as Kansas Youth Soccer Association (KSYSA) for state events! I partcipate in Civil
+                Air Patrol(Aviation Program), because I have an intrest in aviation and hope to be a commericial pilot for a
                 major airline! I also enjoy hanging out with my family and friends during my free time!</p>
         </div>
     </div>
