--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -95,11 +95,13 @@
         style="border: 0" width="100%" height="800px" frameborder="0" id="CCatNallBooking"
         class="schedulegoogleBooking"></iframe>
     <!-- end Google Calendar Appointment Scheduling -->
-    <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; padding: 50px;height: 70vh;display: none;" id="snotreadyforservice">
+    <div style="display: flex; align-items: center; justify-content: center; flex-direction: column; padding: 50px;height: 800px;display: none;"
+        id="snotreadyforservice">
         <h1 style="font-size: 4rem;font-weight: 600;color: var(--accent-color);">Sorry!</h1>
-        <h3 style="font-size: 16px; font-weight: 400;">We are not quite ready for service in your neighborhood at this time! We are sorry for the inconvience!</h3>
+        <h3 style="font-size: 16px; font-weight: 400;">We are not quite ready for service in your neighborhood at this
+            time! We are sorry for the inconvience!</h3>
     </div>
-
+    <div style="width: 100%;height: 800px;" id="schedulepagefiller"></div>
     <footer>
         <div class="fbusinessinfo">
             <img src="../imgs/GreenscapeLogoInCircle.png" alt="">
