--- a/pages/services.html
+++ b/pages/services.html
@@ -83,6 +83,17 @@
         <h3 style="font-weight: 400;font-size: 2rem;text-align: center;">This Page Is Still Under Construction</h3>
     </div>
 
+    <!-- <div class="services">
+        <div class="serviceoutline">
+            <h3>Weekly Servicing Available</h3>
+            <div class="service">
+                <h1>$35</h1>
+                <h2>Mowing</h2>
+                <p>Our mowing services are top of the class with high reviews and earning many recomendatio</p>
+            </div>
+        </div>
+    </div> -->
+
     <footer>
         <div class="fbusinessinfo">
             <img src="../imgs/GreenscapeLogoInCircle.png" alt="">
