--- a/index.html
+++ b/index.html
@@ -232,6 +232,10 @@
             </ul>
         </div>
     </footer>
+    <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
     <script src="javascript/script.js"></script>
 </body>
 
