--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Greenscape JOCO</title>
+    <title>Schedule | Greenscape JOCO</title>
     <link rel="stylesheet" href="../stylesheets/styles.css">
     <link rel="icon" type="image/x-icon" href="/imgs/GreenscapeLogo.png">
     <!-- Icons -->
