--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <li><a href="/pages/wynnewood.html">Wynnewood</a></li>
                 <li><a href="/pages/bridgewood.html">Bridgewood</a></li>
                 <li><a href="/pages/normanyplace.html">Normandy Place</a></li>
-                <li><a href="/pages/timbersedge.html">Timbers Edge</a></li>
+                <!-- <li><a href="/pages/timbersedge.html">Timbers Edge</a></li> -->
             </ul>
         </div>
     </footer>
