--- a/pages/contact.html
+++ b/pages/contact.html
@@ -75,12 +75,21 @@
             </div>
         </div>
     </div>
-
-    <div class="underconstruction"
-        style="display: flex;align-items: center;justify-content: center;width: 100%;height: 70vh;display: flex;align-items: center;justify-content: center;flex-direction: column;">
-        <i class="fa-solid fa-hammer" style="font-size: 5rem;color: var(--accent-color);margin-bottom: 30px;"></i>
-        <h1 style="font-weight: 500;font-size: 4rem;@media screen and (max-width: 400px) {font-size: 3rem;}">Unfortunately</h1>
-        <h3 style="font-weight: 400;font-size: 2rem;text-align: center;">This Page Is Still Under Construction</h3>
+    <div class="contactus">
+        <div class="contactusheader">
+            <h1>Contact Us!</h1>
+            <h3>We would love to talk to you!</h3>
+        </div>
+        <div class="contactcontianer">
+            <img src="../imgs/greysonhubler.jpg" alt="Greyson Hubler">
+            <div class="contactinfo">
+                <h2>Greyson Hubler</h2>
+                <p>Founder/CEO</p>
+                <p>913-340-4503</p>
+                <p><a
+                        href="mailto:greenscapejoco@gmail.com?subject=I%20am%20interested%20in%20lawn%20care&body=Hello!%0D%0AI%20am%20interested%20in%20someone%20taking%20care%20of%20my%20yard!%20Can%20we%20setup%20a%20time%20to%20chat?%0D%0A%0D%0AThanks!%0D%0A(Your%20Name)">greenscapejoco@gmail.com</a>
+            </div>
+        </div>
     </div>
 
     <footer>
@@ -110,7 +119,7 @@
                 <li><a href="/pages/wynnewood.html">Wynnewood</a></li>
                 <li><a href="/pages/bridgewood.html">Bridgewood</a></li>
                 <li><a href="/pages/normanyplace.html">Normandy Place</a></li>
-                <li><a href="/pages/timbersedge.html">Timbers Edge</a></li>
+                <!-- <li><a href="/pages/timbersedge.html">Timbers Edge</a></li> -->
             </ul>
         </div>
     </footer>
