--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -85,7 +85,7 @@
                 <button onclick="open127atnall()">Highlands</button>
                 <button onclick="open127atnall()">Bridgewood</button>
                 <button onclick="open127atnall()">Normandy Place</button>
-                <button onclick="open143atnall()">Timbers Edge</button>
+                <!-- <button onclick="open143atnall()">Timbers Edge</button> -->
             </div>
         </div>
     </div>
@@ -129,7 +129,7 @@
                 <li><a href="/pages/wynnewood.html">Wynnewood</a></li>
                 <li><a href="/pages/bridgewood.html">Bridgewood</a></li>
                 <li><a href="/pages/normanyplace.html">Normandy Place</a></li>
-                <li><a href="/pages/timbersedge.html">Timbers Edge</a></li>
+                <!-- <li><a href="/pages/timbersedge.html">Timbers Edge</a></li> -->
             </ul>
         </div>
     </footer>
