--- a/pages/services.html
+++ b/pages/services.html
@@ -76,23 +76,40 @@
         </div>
     </div>
 
-    <div class="underconstruction"
-        style="display: flex;align-items: center;justify-content: center;width: 100%;height: 70vh;display: flex;align-items: center;justify-content: center;flex-direction: column;">
-        <i class="fa-solid fa-hammer" style="font-size: 5rem;color: var(--accent-color);margin-bottom: 30px;"></i>
-        <h1 style="font-weight: 500;font-size: 4rem;@media screen and (max-width: 400px) {font-size: 3rem;}">Unfortunately</h1>
-        <h3 style="font-weight: 400;font-size: 2rem;text-align: center;">This Page Is Still Under Construction</h3>
+    <div class="servicesheader">
+        <h1>Services</h1>
+        <h4>All Prices are Starting Value</h4>
+        <p>We offer a variety of services to help you maintain your yard and garden.</p>
     </div>
-
-    <!-- <div class="services">
+    <div class="services">
+        <div class="service">
+            <h1>$20/hr</h1>
+            <h2>Gardeing</h2>
+            <p>We would love to help you with whatever gardening is thrown your way! If you have an idea for a project, let us know! We would love to help you! Our job is to make your outdoors an enjoyable place for you and your friends and family a comfortable place to relax outside!</p>
+        </div>
         <div class="serviceoutline">
-            <h3>Weekly Servicing Available</h3>
+            <h3>Weekly <span>Servicing</span> <span>Available!</span></h3>
             <div class="service">
                 <h1>$35</h1>
                 <h2>Mowing</h2>
-                <p>Our mowing services are top of the class with high reviews and earning many recomendatio</p>
+                <p>Our mowing services are top of the class with high reviews and earning many recommendations to friends and family of previous clients! We as a company are always striving to make your yard the best as possible while we are servicing your yard so that you can sit back and relax and let us do what we do best!</p>
+                <div class="serviceincludes">
+                    <h4>Includes</h4>
+                    <ul>
+                        <li>Mowing</li>
+                        <li>Edging</li>
+                        <li>Weedwacking</li>
+                        <li>Bagging <span style="color: var(--accent-color);">(+5)</span></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div> -->
+        <div class="service">
+            <h1>$25</h1>
+            <h2>Snow Shoveling</h2>
+            <p>Would you like to have your driveway and sidewalks clear of snow and ice to prevent slipping and sliding around on the slick surface? Walking on ice can be dangerous especially when you can not see it! Our job is to lower the chance of slipping on ice as much as possible!</p>
+        </div>
+    </div>
 
     <footer>
         <div class="fbusinessinfo">
