--- a/index.html
+++ b/index.html
@@ -198,17 +198,17 @@
         </div>
         <div class="cinfocontainer">
             <div class="cinfo">
-                <h1>4</h1>
+                <h1>5</h1>
                 <h3>Weekly Customers</h3>
             </div>
             <div class="cinfo">
-                <h1>7</h1>
+                <h1>8</h1>
                 <h3>Returning Customers</h3>
             </div>
-            <div class="cinfo">
+            <!-- <div class="cinfo">
                 <h1>100%</h1>
                 <h3>of Customers Returned</h3>
-            </div>
+            </div> -->
         </div>
     </div>
 
