--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@
                 <h1>8</h1>
                 <h3>Returning Customers</h3>
             </div>
-            <!-- <div class="cinfo">
+            <div class="cinfo">
                 <h1>100%</h1>
-                <h3>of Customers Returned</h3>
-            </div> -->
+                <h3>Happy Customers!</h3>
+            </div>
         </div>
     </div>
 
