--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
             <h1>Testimonials</h1>
             <h4>What our Clients Say! Real Testimonials from Real Clients!</h4>
         </div>
+        <div class="testimonialcontainer">
         <div class="testimoialscards">
             <div class="testcard">
                 <h3>Gwenn K.</h3>
@@ -179,6 +180,7 @@
                 <h6>7/28/2025</h6>
             </div>
         </div>
+        <div>
     </div>
 
     <!-- How Can We Help -->
