--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <h6>7/28/2025</h6>
             </div>
         </div>
-        <div>
+        </div>
     </div>
 
     <!-- How Can We Help -->
