--- a/index.html
+++ b/index.html
@@ -145,41 +145,54 @@
             <h1>Testimonials</h1>
             <h4>What our Clients Say! Real Testimonials from Real Clients!</h4>
         </div>
-        <div class="testimonialcontainer">
-        <div class="testimoialscards">
-            <div class="testcard">
-                <h3>Gwenn K.</h3>
-                <h5>Highlands Of Leawood</h5>
-                <span class="teststars"><i class="fa-solid fa-star stargold"></i><i
-                        class="fa-solid fa-star stargold"></i><i class="fa-solid fa-star stargold"></i><i
-                        class="fa-solid fa-star stargold"></i><i class="fa-solid fa-star stargold"></i></span>
-                <p>Greyson is so professional and conscientious! He puts his heart into his work and it shows in how our
-                    lawn looks. His communication is beyond fabulous! He's so mature and a joy to work with!
-                </p>
-                <h6>6/18/2025</h6>
+        <div class="testimonialcardcontainer">
+            <div class="testimoialscards">
+                <div class="testcard">
+                    <h3>Gwenn K.</h3>
+                    <h5>Highlands Of Leawood</h5>
+                    <span class="teststars"><i class="fa-solid fa-star stargold"></i><i
+                            class="fa-solid fa-star stargold"></i><i class="fa-solid fa-star stargold"></i><i
+                            class="fa-solid fa-star stargold"></i><i class="fa-solid fa-star stargold"></i></span>
+                    <p>Greyson is so professional and conscientious! He puts his heart into his work and it shows in how
+                        our
+                        lawn looks. His communication is beyond fabulous! He's so mature and a joy to work with!
+                    </p>
+                    <h6>6/18/2025</h6>
+                </div>
+                <div class="testcard">
+                    <h3>Kristen H.</h3>
+                    <h5>Carriage Crossing</h5>
+                    <span class="teststars"><i class="fa-solid fa-star stargold"></i><i
+                            class="fa-solid fa-star stargold"></i><i class="fa-solid fa-star stargold"></i><i
+                            class="fa-solid fa-star stargold"></i><i class="fa-solid fa-star stargold"></i></span>
+                    <p>Greyson did a wonderful job - he was communicative, prompt and very thorough. Will definitely use
+                        him
+                        again!
+                    </p>
+                    <h6>7/15/2025</h6>
+                </div>
+                <div class="testcard">
+                    <h3>Anastasia A.</h3>
+                    <h5>Carriage Crossing</h5>
+                    <span class="teststars"><i class="fa-solid fa-star stargold"></i><i
+                            class="fa-solid fa-star stargold"></i><i class="fa-solid fa-star stargold"></i><i
+                            class="fa-solid fa-star stargold"></i><i class="fa-solid fa-star stargold"></i></span>
+                    <p>Very responsive, efficient and reliable service!!! Recommend
+                    </p>
+                    <h6>7/28/2025</h6>
+                </div>
+                <div class="testcard">
+                    <h3>Stu G.</h3>
+                    <h5>Highlands of Leawood</h5>
+                    <span class="teststars"><i class="fa-solid fa-star stargold"></i><i
+                            class="fa-solid fa-star stargold"></i><i class="fa-solid fa-star stargold"></i><i
+                            class="fa-solid fa-star stargold"></i><i class="fa-solid fa-star stargold"></i></span>
+                    <p>Greyson does an outstanding job always. His services are prompt, dependable and highly
+                        professional.
+                    </p>
+                    <h6>8/3/2025</h6>
+                </div>
             </div>
-            <div class="testcard">
-                <h3>Kristen H.</h3>
-                <h5>Carriage Crossing</h5>
-                <span class="teststars"><i class="fa-solid fa-star stargold"></i><i
-                        class="fa-solid fa-star stargold"></i><i class="fa-solid fa-star stargold"></i><i
-                        class="fa-solid fa-star stargold"></i><i class="fa-solid fa-star stargold"></i></span>
-                <p>Greyson did a wonderful job - he was communicative, prompt and very thorough. Will definitely use him
-                    again!
-                </p>
-                <h6>7/15/2025</h6>
-            </div>
-            <div class="testcard">
-                <h3>Anastasia A.</h3>
-                <h5>Carriage Crossing</h5>
-                <span class="teststars"><i class="fa-solid fa-star stargold"></i><i
-                        class="fa-solid fa-star stargold"></i><i class="fa-solid fa-star stargold"></i><i
-                        class="fa-solid fa-star stargold"></i><i class="fa-solid fa-star stargold"></i></span>
-                <p>Very responsive, efficient and reliable service!!! Recommend
-                </p>
-                <h6>7/28/2025</h6>
-            </div>
-        </div>
         </div>
     </div>
 
